2012-03-30 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, sdccconf_in.h:
	  added check if c supports tags in unnamed struct,
	  fixed IS_VALID_OPTION
	* sim/ucsim/configure.in, sim/ucsim/configure:
	  fixed IS_VALID_OPTION
	* sim/ucsim/aclocal.m4: regenerated
	* src/pic14/Makefile.in: removed unneeded PORT

2012-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for returning long long, fixes #3512403.
	* device/lib/z180/stubs.s,
	  device/lib/z80/stubs.s,
	  device/lib/gbz80/stubs.s,
	  support/regression/tests/longlong.c:
	  More tests for long long.
	* support/regression/tests/gcc-torture-execute-*.c:
	  Made TODO comments more specific wrt. to what sdcc functionality is required for enabling the test.
	* device/lib/_rrslonglong_rrx_s.c,
	  device/lib/_rrulonglong_rrx_s.c,
	  device/lib/_rlulonglong_rrx_s.c:
	  Fixes for long long shift.

2012-03-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c (initCSupport),
	  device/lib/_rrslonglong_rrx_s.c,
	  device/lib/_rrulonglong_rrx_s.c:
	  Fixed declarations for shift support functions.
	* device/lib/*z*/Makefile.in,
	  device/lib/Makefile.in,
	  device/lib/_r??longlong_rrx_s.c,
	   device/lib/_mullonglong.c:
	  Shift and multiplication support for long long.

2012-03-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  More flexible use of de for gbz80.

2012-03-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (initCSupport): fixed declarations for shift support functions
	* src/SDCCsymt.c (initBuiltIns),
	  src/SDCCast.c (funcOfTypeVarg),
	  src/SDCCast.h: added some const qualifiers 

2012-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  More flexible use of de for gbz80.

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Allow some use of de on gbz80.
	* src/z80/gen.c: